--- a/src/assets/stylesheets/pages/_map.scss
+++ b/src/assets/stylesheets/pages/_map.scss
@@ -77,4 +77,10 @@
     margin-bottom: 1.5em;
   }
 
+  .button {
+    background-color: purple;
+    color: white;
+    border: 3px solid black;
+  }
+
 }
